mule-management-console/v/3.4/installing-the-production-version-of-mmc.adoc
= 安装MMC的生产版本

Mule管理控制台是一款Web应用程序，设计用于在应用程序服务器或容器（例如 link:/tcat-server/v/7.1.0[Tcat服务器]或 http://www.mulesoft.com/understanding-apache-tomcat[Apache Tomcat]）中运行，并且通常打包在.war文件中。

本文档介绍了下载所需文件的位置以及如何为不同的应用程序服务器安装或部署这些文件。请与https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription [与MuleSoft支持小组联系]提出有关下载和部署Mule管理控制台的任何问题。

== 假设

本文档假定您已经安装了Mule Enterprise 3.4.X。如果您需要升级到此版本，请从 http://www.mulesoft.com/support-login[客户门户]下载。如果您使用Mule Enterprise 3.3.X，请阅读本文档的 link:/mule-management-console/v/3.3/installing-the-management-console[切换到3.3.X版本]。

本文档假定您的企业许可证是最新的。有关获取和安装企业许可证的信息，请参阅 link:/mule-user-guide/v/3.4/installing-an-enterprise-license[安装企业许可证]。

本文还假设您已安装了Web应用程序服务器，如Tcat，Tomcat或JBoss。有关硬件要求和支持的应用程序服务器，Java运行时环境和浏览器的最新信息，请参阅 link:/mule-user-guide/v/3.4/hardware-and-software-requirements[硬件和软件要求]。

== 安装和部署清单

要安装管理控制台：

. 从MuleSoft http://www.mulesoft.com/support-login[客户门户]下载Mule管理控制台应用程序（.war文件）。 （请注意，管理控制台代理以前是单独的下载和安装，现在已嵌入到Mule Enterprise发行版中。）
. 将.war文件重命名为`mmc.war`。
+

[TIP]
====
*Why?*

根据您下载的版本，WAR文件的名称会有所不同，格式为`<console_name>-<version>.war`。从客户门户下载此文件后，将名称更改为*`mmc.war`*。以下所有说明都假定您的WAR文件已被重命名为mmc.war。如果您的文件名称不同，请注意您用于访问控制台的URL会相应更改。例如，如果您的战争文件名为`mmc-foobar.war`，则需要使用`  http://localhost:8080:mmc-foobar`来访问控制台。
====

. 如果您的 link:/mule-user-guide/v/3.4/deployment-scenarios[Mule ESB实例打包为一个Web应用程序]（不推荐），请在 link:https://support.mulesoft.com[https://support.mulesoft.com]处打开支持案例以获取特殊说明。
. 调整Web应用程序服务器上的配置，使其优先于MMC的类加载器，而不是Web应用程序服务器的本机类加载器。
. 将您的`mmc.war`文件部署到您的应用程序服务器或其他容器。请参阅以下部分中每个支持的应用程序服务器的具体说明。

特定Web应用程序服务器的== 部署指令

[WARNING]
由于部署过程因应用程序服务器而异，因此应该参考应用程序服务器的文档以获取有关部署Web应用程序的完整信息。

=== 在Tcat / Tomcat中部署管理控制台.war

除了指定JVM参数以外，您可以在Tcat / Tomcat中部署管理控制台和Mule应用程序，无需任何修改。

有关如何在Tcat内部署Web应用程序的说明，请参阅 link:/tcat-server/v/7.1.0[Tcat服务器文档]。

按如下方式改变Tomcat中的JVM参数。

对于Windows：

. 在`$TOMCAT_HOME\bin`目录中创建一个名为`setenv.bat`的文件。
. 将以下字符串复制到文件中：
+
`setenv JAVA_OPTS=-Xmx1024m -XX:MaxPermSize=512m`

. 保存文件。

对于MacOS / Linux：

. 在`$TOMCAT_HOME/bin`目录中创建一个名为`setenv.sh`的文件。
. 将以下行复制到文件中：
+
[source, code, linenums]
----
#!/bin/sh
JAVA_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
----

. 保存文件。
. 使其可执行，例如使用命令`chmod u+x setenv.sh`。

我们建议在IP v4堆栈上运行。 Tomcat将默认运行IPv6，因此为了指定IPv4，请将以下行添加到`setenv.sh`文件中：

[source, code, linenums]
----
-Djava.net.preferIPv4Stack=true
----

请务必不要在您的系统上运行试图使用不同版本的IP协议绑定到相同端口的程序。

对于Tomcat，首先将`mmc.war`文件复制到您的Tomcat `/webapps`目录。 Tomcat在启动时会部署管理控制台应用程序。在Tomcat部署控制台Web应用程序之后，您应该在Tomcat的`webapps`目录中看到名为`mmc`的目录。

=== 在JBoss中部署管理控制台.war

由于旧MBeanServer实现产生的JMX冲突，您必须配置JBoss以使用Java5 MBeanServer。您可以通过在启动命令中提供`-Djboss.platform.mbeanserver`参数来完成此操作。例如：

[source, code, linenums]
----
./run.sh -c all -Djboss.platform.mbeanserver
----

在Windows上，在启动之前，请确保环境变量JAVA_OPTS包含以下内容：

[source, code, linenums]
----
-Djboss.platform.mbeanserver-Djavax.management.builder.initial=org.jboss.mx.server.MBeanServerBuilderImpl
----

请注意，内存相关的JVM选项仍然是必需的。例如：

[source, code, linenums]
----
export JAVA_OPTS="-XX:MaxPermSize=512m -Xmx1G"
----

您也可以尝试根据您的环境指定较小的内存参数，例如：

[source, code, linenums]
----
export JAVA_OPTS="-XX:MaxPermSize=300m -Xmx256m"
----

要成功地将控制台部署到JBoss 6，您需要从JBoss中删除以下文件：

*  `common/lib/quartz.jar`
*  `server/<your_profile>/deploy/quartz-ra.rar`，其中`<your_profile>`是您的服务器配置文件。

== 启动管理控制台

要运行管理控制台，请确保您的容器正在运行，管理控制台Web应用程序已正确部署。然后，在浏览器中输入`http://localhost:8080/mmc`。如果你看到登录屏幕（见下面），你已经正确安装了所有东西，现在正在运行控制台。

使用用户名`admin`和密码`admin`登录。

image:MMC_login.png[MMC_login]

[TIP]
如果另一个应用程序使用端口8080，则可以更改容器配置中的端口（例如Tomcat主目录下的`conf/server.xml`文件）。如果要从其他计算机远程运行管理控制台，请输入主机的正确名称（或IP地址），而不是本地主机。

== 另请参阅

* 熟悉 link:/mule-management-console/v/3.4/orientation-to-the-console[MMC控制台]。
* 了解与 link:/mule-management-console/v/3.4/mmc-walkthrough[MMC演练]一起使用MMC的基本知识。
* 详细了解如何 link:/mule-management-console/v/3.4/setting-up-mmc[设置MMC]满足您的需求。
* 访问 link:/mule-management-console/v/3.4/troubleshooting-tips[故障排除]指南。
+
